// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarkCard renders correctly 1`] = `
<div>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <div
        class="carousel singleChild"
      >
        <div
          class="image image0"
        >
          <img
            class="w-full h-full object-cover"
            src="/imgs/empty-state.png"
          />
        </div>
      </div>
    </header>
    <h2
      class="title"
    >
      <a
        href="/bookmarks/3"
      >
        My empty bookmark
      </a>
    </h2>
    <p
      class="description"
    >
      0 propiedades guardadas
    </p>
  </div>
</div>
`;

exports[`BookmarkCard renders correctly multi items 1`] = `
<div>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <div
        class="carousel twoChildren"
      >
        <div
          class="image image0"
        >
          <img
            class="w-full h-full object-cover"
            src="https://unsplash.it/1"
          />
        </div>
        <div
          class="image image1"
        >
          <img
            class="w-full h-full object-cover"
            src="https://unsplash.it/2"
          />
        </div>
      </div>
    </header>
    <h2
      class="title"
    >
      <a
        href="/bookmarks/3"
      >
        My bookmarks
      </a>
    </h2>
    <p
      class="description"
    >
      2 propiedades guardadas
    </p>
  </div>
</div>
`;

exports[`BookmarkCard renders correctly one item 1`] = `
<div>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <div
        class="carousel singleChild"
      >
        <div
          class="image image0"
        >
          <img
            class="w-full h-full object-cover"
            src="https://unsplash.it/1"
          />
        </div>
      </div>
    </header>
    <h2
      class="title"
    >
      <a
        href="/bookmarks/3"
      >
        My bookmarks
      </a>
    </h2>
    <p
      class="description"
    >
      1 propiedad guardada
    </p>
  </div>
</div>
`;
